[package]
name = "py-revm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_revm"
crate-type = ["cdylib"]

[dependencies]
ethers-core = "2.0.7"
ethers-providers = "2.0.7"
pyo3 = "0.19.0"
revm = { version = "3.3.0", features = ["serde", "ethersdb"] }
ruint = "1.8.0"
serde_json = "1.0.100"
